# prizm.ai

./: QUICKSTART.md  README.md
backend/: .env.example  README.md  app.py  config.py  pyproject.toml  requirements.txt  run_all.py
backend/agents/: __init__.py  agent.py  base_agent.py  extractor.py  factor_extractor.py  opponent.py  opposing_agent.py  supporter.py  supportive_agent.py  synthesizer.py  synthesizer_agent.py  verifier.py
backend/agents/.adk/: session.db
backend/analyst/: agent.py  main.py
backend/debaters/antagonist/: agent.py  main.py
backend/debaters/protagonist/: agent.py  main.py
backend/models/: debate_schema.py
backend/orchestration/: coordinator.py  debate_manager.py
backend/orchestrator/: agent.py  main.py
backend/orchestrator/.adk/: session.db
backend/prompts/: factor_extraction.txt  opposing_reasoning.txt  supportive_reasoning.txt  synthesis.txt
backend/routes/: __init__.py  analyze.py
backend/schemas/: messages.py
backend/services/: gemini_client.py  logger.py
backend/shared/: schemas.py
backend/synthesizer/: agent.py  main.py  tools.py
backend/tools/: google_serp.py  pdf_generator.py
backend/utils/: helpers.py
backend/verifier/: agent.py  main.py  tools.py
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/lib/: firebase.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chats/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  ReviewsCarousel.tsx  SubscriptionPackages.tsx
(+5 files in other folders)
