[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "fpdf>=1.7.2",
    "google-adk>=1.22.1",
    "google-genai>=1.57.0",
    "google-search-results>=2.4.2",
    "pydantic>=2.12.5",
]
